Fixed footer on mobile devices

--- a/css/base.css
+++ b/css/base.css
@@ -120,7 +120,6 @@ body {
     border-radius: 4px 4px 0px 0px;
     position: fixed;
     width: 100%;
-    height: 16px;
     left: 50%;
     bottom: 0px;
     transform: translateX(-50%);
